--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Frâneo José João</title>
   </head>
   <body>
+    <div class="tapar"></div>
     <header>
       <div class="interface">
         <div>
@@ -135,7 +136,7 @@
             </div>
             <!--txt-topo-site-->
 
-            <div class="img-topo-site animation">
+            <div class="img-topo-site">
               <img
                 src="./Arquivos/img/foto-removebg-preview.png"
                 alt="Foto de Frâneo José João"
