--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <!--txt-topo-site-->
             
             <div class="img-topo-site">
-              <!-- <img
-                src="./Arquivos/img/foto back white.png"
+              <img
+                src="./Arquivos/img/foto sem fundo.png"
                 alt="Foto de Frâneo José João"
-              /> -->
+              />
             </div>
             <!--img-topo-site-->
           </div>
@@ -189,7 +189,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="mailto:franeojosejoao@gmail.com">
+                   <a href="mailto:franeojosejoao@gmail.com">
                     <img
                     src="./Arquivos/img/e-mail.png"
                     alt="E-mail"
