--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
         <div class="interface">
           <div class="flex">
             <div class="txt-topo-site">
-              <h1>Hello World<span>.</span>&#127758;</h1>
+              <h1>Olá Mundo<span>.</span>&#127758; <br>Sou o Frâneo João</h1>
               <p>
-                Transforme suas ideias em realidade digital! 🚀🚀 Combinando design criativo 🎨, funcionalidades práticas 💻 e inteligentes 💡, resultados de alto impacto e surpreendentes 📈.<br>
-                Desenvolvo soluções digitais que fazem a diferença! Estou pronto para construir uma solução ideal para o seu projeto e para criar a presença online dos seus sonhos🌟✨🌟✨.
+                Transforme suas ideias em realidade digital, Combinando design criativo, funcionalidades práticas 💻 e inteligentes, resultados de alto impacto e surpreendentes 📈.<br>
+                Desenvolvo soluções digitais que fazem a diferença! Estou pronto para construir uma solução ideal para o seu projeto, negócio ou empresa.
               </p>
 
               <div class="btn-contato">
@@ -154,13 +154,13 @@
       <section class="sobre" id="sobre">
         <div class="interface">
           <div class="flex">
-            <div>
-              <img src="./Arquivos/img/trabalhando tarde.gif" alt="Gif de um programador trabalhando"/>
+            <div class="gif">
+              <img  src="./Arquivos/img/trabalhando tarde.gif" alt="Gif de um programador trabalhando"/>
             </div>
             <!--img-sobre-->
             
             <div class="txt-sobre">
-              <h2>MUITO PRAZER, <span>SOU O FRÂNEO JOÃO.</span></h2>
+              <h2>Sobre mim</h2>
               <p>
                 Sou desenvolvedor font end com 4 anos de experiência em desenvolvimento de
                 aplicações web e mobile. Possuo sólida
