--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <!--img-sobre-->
             
             <div class="txt-sobre">
-              <h2>Sobre mim</h2>
+              <h2>Sobre <span>mim</span>.</h2>
               <p>
                 Sou desenvolvedor font end com 4 anos de experiência em desenvolvimento de
                 aplicações web e mobile. Possuo sólida
